--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@twa-dev/types": "^7.0.0",
     "@types/node": "20.5.6",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
